--- a/vercel.json
+++ b/vercel.json
@@ -13,5 +13,11 @@
             "source": "/.gitattributes",
             "destination": "/404"
         }
+    ],
+    "rewrites": [
+        {
+            "source": "/sitemap",
+            "destination": "/sitemap.xml"
+        }
     ]
 }
